# motya

./: .gitignore  Cargo.toml  README.md  ci.sh
.github/: depandabot.yml
.github/workflows/: ci.yml  codecov.yml
docs/: release-checklist.md  roadmap.md  what-is-it.md  what-to-build.md
docs/release-notes/: 2024-04-29-v0.2.0.md  2024-06-03-v0.2.1.md  2024-08-30-v0.5.0.md
source/motya/: Cargo.toml
source/motya-config/: Cargo.toml
source/motya-config/src/: builder.rs  cli.rs  config_source.rs  internal.rs  lib.rs  loader.rs  var_registry.rs
source/motya-config/src/cli/: builder.rs  cli.rs  cli_struct.rs
source/motya-config/src/common_types/: bad.rs  balancer.rs  builtin_filters_name.rs  connectors.rs  definitions.rs  definitions_table.rs  error.rs  file_server.rs  key_template.rs  listeners.rs  mod.rs  rate_limiter.rs  section_parser.rs  service.rs  simple_response_type.rs  value.rs
source/motya-config/src/kdl/: chain_parser.rs  compiler.rs  connectors.rs  definitions.rs  file_server.rs  fs_loader.rs  includes.rs  key_profile_parser.rs  key_template.rs  linker.rs  listeners.rs  mod.rs  rate_limit.rs  rate_limiter.rs  services.rs  system_data.rs  transforms_order.rs  utils.rs
source/motya-config/src/kdl/models/: chains.rs  connectors.rs  definitions.rs  file_server.rs  imports.rs  key_profile.rs  listeners.rs  lol.rs  mod.rs  root.rs  services.rs  system.rs  transforms_order.rs
source/motya-config/src/kdl/parser/: block.rs  ctx.rs  ensures.rs  node_schema.rs  parsable.rs  spanned.rs  typed_name.rs  typed_value.rs  utils.rs
source/motya-config/src/kdl/schema/: definitions.rs  mod.rs  utils.rs  value_info.rs
source/motya-config/src/legacy/: mod.rs  multi.rs  request_selector.rs  single.rs  something.rs
source/motya-config/src/snapshots/: motya_config__loader__tests__full_configuration_snapshot.snap  motya_config__loader__tests__kdl_schema_serialization_snapshot.snap
source/motya-lsp/: Cargo.toml
source/motya-lsp/src/: backend.rs  diagnostics.rs  loader.rs  main.rs
source/motya-macro/: Cargo.toml
source/motya-macro/src/: lib.rs
source/motya-macro/src/node_parser/: mod.rs  model.rs  utils.rs
source/motya-macro/src/node_parser/codegen/: heuristics.rs  mod.rs  schema.rs  utils.rs
source/motya-macro/src/node_parser/codegen/parser/: child_gen.rs  constructor_gen.rs  content_gen.rs  enum_gen.rs  field_gen.rs  mod.rs  struct_gen.rs  types.rs  validation.rs
source/motya-macro/src/node_parser/parse/: analyzer.rs  attrs.rs  mod.rs  registry.rs
source/motya-vscode/: Cargo.toml
source/motya-vscode/src/: dto.rs  lib.rs  utils.rs
source/motya-vscode/src/adapter/: map_collector.rs  mod.rs
source/motya/assets/: global-definitions.kdl  minimal-config.kdl  request_filter.wasm  test-config.kdl  test-config.toml  wasm-example-config.kdl
source/motya/benches/: balancer.rs  upsert_header_request.rs
source/motya/src/: app_context.rs  files.rs  fs_adapter.rs  lib.rs  main.rs
source/motya/src/config/: builder.rs  cli.rs  config_aggregator.rs  internal.rs  mod.rs  utils.rs
source/motya/src/config/common_types/: connectors.rs  definitions.rs  file_server.rs  listeners.rs  mod.rs  rate_limiter.rs  service.rs  system_data.rs
source/motya/src/config/kdl/: chain_parser.rs  connectors.rs  definitions.rs  includes.rs  listeners.rs  utils.rs
source/motya/src/proxy/: context.rs  key_selector.rs  mod.rs  populate_listeners.rs  request_selector.rs  upstream_factory.rs  upstream_router.rs
source/motya/src/proxy/balancer/: key_selector.rs  key_selector_builder.rs  mod.rs
source/motya/src/proxy/filters/: chain_resolver.rs  generate_registry.rs  registry.rs  types.rs
source/motya/src/proxy/filters/builtin/: cidr_range.rs  helpers.rs  mod.rs  rate_limiter.rs  simple_response.rs
source/motya/src/proxy/filters/builtin/request/: remove_headers.rs  rewrite_path.rs  strip_prefix.rs  upsert_headers.rs
source/motya/src/proxy/filters/builtin/response/: mod.rs  remove_header.rs  upsert_header.rs
source/motya/src/proxy/plugins/: g.rs  host.rs  loader.rs  mod.rs  module.rs  store.rs
source/motya/src/proxy/rate_limiter/: instance.rs  mod.rs  registry.rs  storage.rs
source/motya/src/proxy/rate_limiting/: mod.rs  multi.rs  single.rs
source/motya/src/proxy/watcher/: diffs.rs  file_watcher.rs  mod.rs
source/motya/tests/: check_cidr.rs  integration_filters.rs
source/motya/tests/common/: mod.rs  test_setup.rs
source/motya/wit/: host.wit
source/river/: Cargo.toml
source/river/assets/: global-definitions.kdl  minimal-config.kdl  test-config.kdl  wasm-example-config.kdl
source/river/src/: files.rs  main.rs
source/river/src/config/: builder.rs  cli.rs  config_aggregator.rs  internal.rs  mod.rs
source/river/src/config/common_types/: bad.rs  connectors.rs  definitions.rs  file_server.rs  listeners.rs  mod.rs  path_control.rs  rate_limiter.rs  rules.rs  service.rs  system_data.rs
source/river/src/config/kdl/: chain_parser.rs  connectors.rs  definitions.rs  file_server.rs  listeners.rs  mod.rs  path_control.rs  rate_limiter.rs  system_data.rs
source/river/src/proxy/: mod.rs  request_selector.rs  upstream_factory.rs
source/river/src/proxy/filters/: chain_resolver.rs  generate_registry.rs  mod.rs  registry.rs  types.rs
source/river/src/proxy/filters/builtin/: cidr_range.rs  helpers.rs  mod.rs  simple_response.rs
source/river/src/proxy/filters/builtin/request/: mod.rs  remove_headers.rs  upsert_headers.rs
source/river/src/proxy/filters/builtin/response/: remove_header.rs  upsert_header.rs
source/river/src/proxy/filters/builtin/wasm_modules/: mod.rs
source/river/src/proxy/plugins/: g.rs  host.rs  loader.rs  module.rs  store.rs
source/tests/: Cargo.toml
source/tests/src/: check_cidr.rs  check_cli_serve_and_hello.rs  check_diff_filewatcher.rs  integration_filters.rs  lib.rs  load_balancer.rs  load_balancer_ketama.rs
source/tests/src/common/: test_setup.rs
user-manual/: book.toml
user-manual/src/: install.md  intro.md  reloading.md
user-manual/src/concepts/: mod.md
user-manual/src/config/: cli.md  kdl.md  mod.md
