[workspace]
resolver = "2"
members = [
    "source/motya"
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


[patch.crates-io.static-files-module]
git = "https://github.com/Tam1SH/pandora-web-server.git"
rev = "050b9a86226bd08c152ffa4fc25bdfada4f66ea1"
# path = "../pandora-web-server/static-files-module"

[patch.crates-io.pandora-module-utils]
git = "https://github.com/Tam1SH/pandora-web-server.git"
rev = "050b9a86226bd08c152ffa4fc25bdfada4f66ea1"
# path = "../pandora-web-server/pandora-module-utils"
