[workspace]
resolver = "2"
members = [
    "source/motya",
    "source/motya-config", "source/motya-lsp", 
    "source/motya-macro",
    "source/tests"
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


[patch.crates-io.static-files-module]
git = "https://github.com/Tam1SH/pandora-web-server.git"
rev = "050b9a86226bd08c152ffa4fc25bdfada4f66ea1"
# path = "../pandora-web-server/static-files-module"

[patch.crates-io.pandora-module-utils]
git = "https://github.com/Tam1SH/pandora-web-server.git"
rev = "050b9a86226bd08c152ffa4fc25bdfada4f66ea1"
# path = "../pandora-web-server/pandora-module-utils"

[workspace.dependencies]
motya-config = { path = "source/motya-config" }
motya-macro = { path = "source/motya-macro" }

async-recursion = "1.1.1"
fqdn = "0.5.0"
arc-swap = "1.7.1"
async-trait = "0.1.89"
cidr = "0.3.1"
futures-util = "0.3.31"
http = "1.3.1"
kdl = "6.5.0"
miette = { version = "7.6.0", features = ["fancy", "serde"] }
regex = "1.10.4"
thiserror = "2.0.17"
tokio = { version ="1.37.0" }
tracing = "0.1.40"
bytes = "1.11.0"
nix = { version = "0.30.1", features = ["signal"] }
matchit = "0.9.0"
reqwest = "0.12.24"
wasmtime = { version = "39.0.0", features = ["component-model"] }
wasmtime-wasi = "39.0.0"
wasmtime-wasi-io = "39.0.0"


pingora = "0.6.0"
pingora-proxy = "0.6.0"
pingora-http = "0.6.0"
pingora-load-balancing = "0.6.0"
notify = "8.2.0"

static-files-module = "0.2"
pandora-module-utils = "0.2"
tracing-subscriber = { version = "0.3.20", features = ["fmt","tracing-log"] }
clap = { version  = "4.5.53", features = ["derive"]}

# dev
tempfile = "3.23.0"
wiremock = "0.6.5"
