[package]
name = "motya-config"
version = "0.5.0"
edition = "2021"

[dependencies]
async-recursion = { workspace = true }
fqdn = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true } 
http = { workspace = true }
clap = { workspace = true }
kdl = { workspace = true }
miette = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
derive_more = { version = "2.1.0", features = ["deref"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }