[package]
name = "motya-config"
version = "0.5.0"
edition = "2021"

[dependencies]
motya-macro = { workspace = true }
async-recursion = { workspace = true }
fqdn = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true } 
http = { workspace = true }
clap = { workspace = true }
kdl = { workspace = true }
miette = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
derive_more = { version = "2.1.0", features = ["deref"] }
humantime = "2.3.0"
num_cpus = "1.17.0"
rand = "0.9.2"
insta = "1.45.1"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
