[package]
name = "motya-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.148"
dashmap = "6.1.0"
ropey = "1.6.1" 
miette = { workspace = true }
motya-config = { workspace = true }
kdl = { workspace = true }
async-recursion = "1.1.1"
path-clean = "1.0"