[package]
name = "motya-vscode"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.106"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
path-clean = "1.0"
miette = { workspace = true }
thiserror = { workspace = true }
kdl = { workspace = true }
async-trait = { workspace = true }
async-recursion = { workspace = true }
motya-config = { workspace = true }
wasm-bindgen-futures = "0.4.56"
