[package]
name          = "motya"
version       = "0.5.0"

authors       = [
    "James Munns <james@onevariable.com>",
]
edition       = "2021"
readme        = "../../README.md"
repository    = "https://github.com/memorysafety/river"
description   = "A reverse proxy application, based on the pingora library from Cloudflare"
license       = "Apache-2.0"
categories    = [

]
keywords      = [
    "proxy",
]
documentation = "https://docs.rs/motya/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[[bench]]
name = "upsert_header_request"
harness = false

[dependencies]
motya-config = { workspace = true } 
pandora-module-utils = { workspace = true } 
pingora = { workspace = true } 
pingora-proxy = { workspace = true } 
pingora-load-balancing = { workspace = true } 
pingora-http = { workspace = true }
static-files-module = { workspace = true } 
tokio = { workspace = true } 
clap = { workspace = true } 
matchit = { workspace = true } 
http = { workspace = true }  
futures-util = { workspace = true }  
async-trait = { workspace = true }
arc-swap = { workspace = true }
miette = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
fqdn = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-io = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
cidr = { workspace = true }
bytes = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { workspace = true }
uuid = { version = "1.19.0", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64"] }
murmur3 = "0.5"
fnv = "1.0"

[dev-dependencies]
tempfile = { workspace = true }
wit-bindgen = { version = "0.48.1" }
wiremock = { workspace = true }
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
pprof = { version = "0.15.0", features = ["flamegraph", "criterion"] }
assert_cmd = "2.1.1"
predicates = "3.1.3"






