[package]
name          = "river"
version       = "0.5.0"

authors       = [
    "James Munns <james@onevariable.com>",
]
edition       = "2021"
readme        = "../../README.md"
repository    = "https://github.com/memorysafety/river"
description   = "A reverse proxy application, based on the pingora library from Cloudflare"
license       = "Apache-2.0"
categories    = [

]
keywords      = [
    "proxy",
]
documentation = "https://docs.rs/river/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
async-trait = "0.1.89"
cidr = "0.3.1"
concread = "0.5.7"
futures-util = "0.3.31"
http = "1.3.1"
kdl = "6.5.0"
lazy_static = "1.5.0"
leaky-bucket = "1.1.2"
log = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.10.4"
thiserror = "2.0.17"
tokio = "1.37.0" # TODO: check for implicit feature usage
toml = "0.9.8"
tracing = "0.1.40"
# WASM
wit-bindgen = { version = "0.48.1" }
wasmtime = { version = "39.0.0", features = ["component-model"] }
wasmtime-wasi = "39.0.0"
wasmtime-wasi-io = "39.0.0"

# Pingora dependencies
pingora = "0.6.0"
pingora-core = { version = "0.6.0", features = ["openssl", "openssl_derived"] }
pingora-proxy = "0.6.0"
pingora-http = "0.6.0"
pingora-load-balancing = "0.6.0"
bytes = "1.11.0"
itertools = "0.14.0"


[dev-dependencies]
wit-bindgen = { version = "0.48.1" }

[dependencies.static-files-module]
version = "0.2"

[dependencies.pandora-module-utils]
version = "0.2"

[dependencies.tracing-subscriber]
version  = "0.3.20"
features = [
    "fmt",
    "tracing-log",
]

[dependencies.clap]
version  = "4.5.53"
features = [
    "derive",
]

[dependencies.serde]
version  = "1.0.228"
features = [
    "derive"
]

